--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-pandas
-numpy 
-seaborn 
-matplotlib
-scikit-learn
-xgboost
-catboost
-
-#-e .
+joblib==1.5.3
+numpy==2.4.0
+pandas==2.3.3
+python-dateutil==2.9.0.post0
+pytz==2025.2
+scikit-learn==1.8.0
+scipy==1.16.3
+setuptools==80.9.0
+six==1.17.0
+threadpoolctl==3.6.0
+tzdata==2025.3
+wheel==0.45.1
