--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
+Flask==3.1.2
+gunicorn==21.2.0
+
+numpy==1.26.4
+pandas==2.2.2
+scikit-learn==1.4.2
+
 catboost==1.2.8
 dill==0.3.8
-Flask==3.1.2
-numpy==2.4.1
-pandas==3.0.0
-scikit_learn==1.3.2
-setuptools==80.9.0
-xgboost==1.7.6
